<resources>
    <string name="app_name">Valorant Data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_navigation">Home</string>
    <string name="agent_role">Agent Role :</string>
    <string name="agent_icon_desc">Agent Icon Images</string>
    <string name="agent_name">Agent Name</string>
    <string name="weapon_category">Weapon Category :</string>
    <string name="weapon_name">Weapon Name</string>
    <string name="weapon_icon_desc">Weapon Icon Images</string>
    <string name="weapon_stats">Weapon Stats</string>
    <string name="weapon_fire_rate">Fire Rate :</string>
    <string name="weapon_reload_speed">Reload Speed :</string>
    <string name="weapon_magazine_size">Magazine Size :</string>
    <string name="agent_skills">Agent Abilities :</string>
    <string name="maps_icon_desc">Maps Icon Images</string>
    <string name="maps_name">Maps Name</string>
    <string name="text_no_result">No Result, Try Again Later</string>
    <string name="text_agent_data">Valorant Agent Data</string>
    <string name="text_maps">Valorant Maps</string>
    <string name="text_weapon_data">Valorant Weapon Data</string>
    <string name="text_game_modes">Valorant Game Modes</string>
    <string name="character_navigation">Agent</string>
    <string name="weapon_navigation">Weapon</string>
    <string name="maps_navigation">Maps</string>
    <string name="text_description">Description :</string>
    <string name="text_abilities">Abilities :</string>
    <string name="image_agent_full_portrait_desc">Image Agent Full Portrait</string>
    <string name="text_weapon_stats">Weapon Stats :</string>
    <string name="image_maps_splash_desc">Image Maps Splash</string>
    <string name="text_agent_role">Role :</string>
    <string name="text_weapon_skins">Weapon Skins :</string>
</resources>