<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerWeapon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@drawable/bg_layout">

    <TextView
        android:id="@+id/tvWeaponName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/weapon_name"
        android:maxLines="2"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgWeaponIcon"
        android:layout_width="320dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        app:riv_corner_radius="10dp"
        android:background="@drawable/bg_image"
        android:backgroundTint="#505050"
        android:contentDescription="@string/weapon_icon_desc"
        app:layout_constraintTop_toBottomOf="@+id/tvWeaponName"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/horizontalLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@+id/imgWeaponIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/weapon_category"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/weaponCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleMagazine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/weapon_magazine_size"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/weaponMagazine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleFireRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/weapon_fire_rate"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/weaponFireRate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/horizontalLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false"
        app:layout_constraintTop_toBottomOf="@+id/horizontalLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/titleReloadSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:text="@string/weapon_reload_speed"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/weaponReloadSpeed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="5dp"
            android:maxLines="1"
            android:fontFamily="sans-serif"
            android:textAlignment="textStart"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingWeaponImage"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/imgWeaponIcon"
        app:layout_constraintStart_toStartOf="@+id/imgWeaponIcon"
        app:layout_constraintEnd_toEndOf="@+id/imgWeaponIcon"
        app:layout_constraintBottom_toBottomOf="@+id/imgWeaponIcon"/>

</androidx.constraintlayout.widget.ConstraintLayout>